[project]
name = "reddit-easy-post"
version = "0.1.0"
description = "Easy to use YAML to Reddit posting via API"
authors = [
    {name = "Jean-Luc Thumm", email = "jeanlucthumm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "praw>=7.8.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
main = "reddit_easy_post.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
